--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.3",
     "axios": "^1.7.9",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-webcam": "^7.2.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
