--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 DB_HOST="localhost"
 DB_USER="root"
 DB_PASSWORD=""
-DB_NAME="FRAS_FYP"
+DB_NAME="fras_recovered"
 PORT=3000
 JWT_KEY="jwt-secret-key"
