--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,6 +15,7 @@
     "@tailwindcss/cli": "^4.0.3",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
