--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "boxicons": "^2.1.4",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
