--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/cli": "^4.0.3",
     "@tailwindcss/vite": "^4.0.6",
