--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -22,6 +22,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.6"
   },
