--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -18,8 +18,10 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.8",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.5",
