--- a/frontend/my-react-app/package.json
+++ b/frontend/my-react-app/package.json
@@ -15,6 +15,7 @@
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/cli": "^4.0.3",
     "@tailwindcss/vite": "^4.1.3",
+    "apexcharts": "^4.5.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -22,7 +23,9 @@
     "chart.js": "^4.4.8",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.1.5",
